Add account register api and modified the login api
