# router/routers/captcha_router.go
@@ -11,14 +11,14 @@ import (
 type CaptchaRouter struct{}
 
 // @BasePath /api/v1
-// @Tags 不限用户-图片验证码相关
-// @Summary 图片验证码生成接口
-// @Description 根据给定的参数生成图片验证码,为提高安全性,不建议图片宽高太大或字符个数太少
+// @Tags Utilities-Captcha Module
+// @Summary Get a captcha image
+// @Description This interface returns an image data with the given parameters, the size of the request should be considered, can NOT be too high or too low.
 // @Accept text/plain
 // @Produce json
-// @Param w query int false "图片验证码的宽,默认值100,最大值500,单位:px"
-// @Param h query int false "图片验证码的高,默认值30,最大值200,单位:px"
-// @Param l query int false "图片验证码包含字符的个数,范围[4,8],请根据宽高显示的实际效果来决定此参数,默认值4,单位:个"
+// @Param w query int false "the width of the image, default value is 100, max value should no more than 500. unit:px"
+// @Param h query int false "the heigh of the image, default value is 30, max value should no more than 100. unit:px"
+// @Param l query int false "the length of the letters shown on the image, default value is 4, it should be in the zone of [4,8]"
 // @Success 200 {object} resp.CaptchaGet
 // @Router /captcha/get [GET]
 func (cr *CaptchaRouter) Get(c *gin.Context) {
@@ -40,13 +40,13 @@ func (cr *CaptchaRouter) Get(c *gin.Context) {
 }
 
 // @BasePath /api/v1
-// @Tags 不限用户-图片验证码相关
-// @Summary 图片验证码校验接口
-// @Description 接收图片验证码参数对输入的captcha对儿进行校验
+// @Tags Utilities-Captcha Module
+// @Summary Check the captchaCode
+// @Description This interface checks the captcha code (called 'cc')
 // @Accept text/plain
 // @Produce json
-// @Param ci query string true "图片验证码的ID(captchaId)"
-// @Param cc query string true "图片验证码显示的字符(captchaCode),大小写不敏感"
+// @Param ci query string true "the id of the catpcha"
+// @Param cc query string true "the letters on the captcha image, case insensitive"
 // @Success 200 {object} resp.CheckCaptcha
 // @Router /captcha/check [GET]
 func (cr *CaptchaRouter) Check(c *gin.Context) {
